--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
             <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.21.0</version>
+        </dependency>
         
     </dependencies>
 </project>
