--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,37 @@
             </plugin>
             
             <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.15.0</version>
+                
+              
+                <dependencies>
+                    <dependency>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-junit5-plugin</artifactId>
+                        <version>1.2.2</version> 
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    
+                    <targetClasses>
+                        <param>de.ipb_halle.enzymeml.**</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>de.ipb_halle.enzymeml.**Test</param> 
+                    </targetTests>
+                    <testPlugin>junit5</testPlugin>
+                    <mutator>ALL</mutator>                        
+                    <mutator>EXPERIMENTAL</mutator>  
+                    <excludedMethods>
+                        <param>set*</param>
+                        <param>add*</param>
+                    </excludedMethods>              
+                </configuration>
+            </plugin>
+            
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.12</version>
